<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_calibration_manager</name>
  <version>0.0.0</version>
  <description>the sensor_calibration_manager package</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos Tsunekawa</maintainer>
  <license>Apache License 2.0</license>

  <depend>python3-pyside2.qtquick</depend>
  <depend>python3-transforms3d</depend>
  <depend>ros2launch</depend>
  <depend>tier4_calibration_msgs</depend>

  <exec_depend>autoware_image_transport_decompressor</exec_depend>
  <exec_depend>ground_plane_calibrator</exec_depend>
  <exec_depend>interactive_camera_lidar_calibrator</exec_depend>
  <exec_depend>lidar_to_lidar_2d_calibrator</exec_depend>
  <exec_depend>mapping_based_calibrator</exec_depend>
  <exec_depend>marker_radar_lidar_calibrator</exec_depend>
  <exec_depend>tag_based_pnp_calibrator</exec_depend>
  <exec_depend>tag_based_sfm_calibrator</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tier4_calibration_views</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
