<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tier4_calibration_views</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos Tsunekawa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-pyside2.qtquick</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tier4_calibration_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
