<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>extrinsic_calibration_manager</name>
  <version>0.1.0</version>
  <description>The extrinsic_calibration_manager package</description>
  <maintainer email="yohei.mishina@tier4.jp">Yohei Mishina</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_calibration_msgs</depend>

  <exec_depend>autoware_launch</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>individual_params</exec_depend>
  <exec_depend>extrinsic_manual_calibrator</exec_depend>
  <exec_depend>extrinsic_calibration_client</exec_depend>
  <exec_depend>extrinsic_ground_plane_calibrator</exec_depend>
  <exec_depend>extrinsic_interactive_calibrator</exec_depend>
  <exec_depend>extrinsic_dummy_calibrator</exec_depend>
  <exec_depend>extrinsic_tag_based_calibrator</exec_depend>
  <exec_depend>tunable_static_tf_broadcaster</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
